# python_ci

./: .coverage  .pre-commit-config.yaml  coverage.xml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yaml
src/python_ci/: __init__.py
tests/python_ci/: test_init.py
