[project]
name = "python-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juanda", email = "juandavidgo1997@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
python-ci = "python_ci:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"